--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Chase LaSpisa</h1>
-								<p>Doctoral candidate at the University of Iowa. <a href="https://html5up.net">HTML5 UP</a> International Relations<br />
-								and Comparative Politics. <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Doctoral candidate at the University of Iowa. <a href="https://html5up.net"></a> International Relations,<br />
+								 Comparative Politics, and Spatial Econometrics. <a href="https://html5up.net/license"></a></p>
 							</div>
 						</div>
 						<nav>
