--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://x.com/chase_laspisa" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://linkedin.com/in/chase-laspisa-8bb015356" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/chaselaspisa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
