--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic01.png" alt="" /></span>
-								<p>I am currently a PhD candidate in political science at the University of Iowa focusing on international relations and comparative politics. I graduated from Oklahoma State University in May 2020 with a BA in political science, as well as minors in Economics and Russian Language. I also hold an MA in political science (2021) from the University of Iowa.</p>
+								<p>I am from Bartlesville, Oklahoma, and I am currently a PhD candidate in political science at the University of Iowa focusing on international relations and comparative politics. I graduated from Oklahoma State University in May 2020 with a BA in political science, as well as minors in Economics and Russian Language. I also hold an MA in political science (2021) from the University of Iowa.</p>
 								<p>My research centers around the role of natural resources in politics, particularly conflict, cooperation, and contentious politics. My work explores the effect that natural resources have on conflict onset and conflict management, especially in the maritime context, and how natural resources influence regime behavior and social mobilization at all levels of analysis.</p>
 								<p>My dissertation examines when, where, and why offshore oil and natural gas cause states to engage in conflictual behavior versus cooperative behavior. I develop and test mechanisms for how specific conditions under which offshore oil and natural gas are exploited, managed, and traded influence maritime conflict dynamics. I also treat offshore oil and offshore natural gas as separate resources that have different effects on international relations.</p>
+								<p>I am primarily a quantitative researcher, and I am passionate about developing new data. I have been a part of multiple data generation projects including the Issues Correlates of War, and I have extensive experience in coding and gathering novel data. I am also interested in spatial methodologies and exploring spatial relationships in international conflict and cooperation. Additionally, I have served as an editorial assistant for two journals: Foreign POlicy Analysis and American Political Science Review. This has given me significant experience with journals and the publication process.</p>
+								<p>Outside of research, I love reading, traveling, and video games, and I began knitting during my time in Norway. I enjoy the fantasy and science fiction genres, and you can often find me reading in a park or coffee shop on the weekends.</p>
 							</article>
 
 						<!-- Research -->
@@ -76,7 +78,11 @@
 							<article id="teaching">
 								<h2 class="major">Teaching</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p style="margin-bottom:0;"><b>Primary Instructor</b></p>
+								<p style="padding-top:0;">POLI 3512: International Conflict (Fall 2025)</p>
+								<p style="margin-bottom:0;"><b>Teaching Assistant</b></p>
+								<p style="padding-top:0;"></p>POLI 1501:0EXW: Introduction to American Foreign Policy - Head Teaching Assistant </p>
+								<p style="padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
 							</article>
 
 						<!-- Contact -->
