--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<p style="padding-top:0;">POLI 3512: International Conflict (Fall 2025)</p>
 								<p style="margin-bottom:0;"><b>Teaching Assistant</b></p>
 								<p style="margin : 0; padding-top:0;"></p>POLI 1501:0EXW: Introduction to American Foreign Policy - Head Teaching Assistant </p>
-								<p style="padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
+								<p style="margin : 0; padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
 							</article>
 
 						<!-- Contact -->
