--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<!-- CV -->
 							<article id="CV">
 								<h2 class="major">CV</h2>
-								<a href="file:///C:/Users/Chase/Downloads/LaSpisa_CV_6.25.pdf" target="_blank">View CV</a>
+								<a href="LaSpisa_CV_6.25.pdf" target="_blank">View CV</a>
 							</article>
 
 						<!-- Teaching -->
