--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<!-- Teaching -->
 							<article id="teaching">
 								<h2 class="major">Teaching</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic03.jpeg" alt="" /></span>
 								<p style="margin-bottom:0;"><b>Primary Instructor</b></p>
 								<p style="padding-top:0;">POLI 3512: International Conflict (Fall 2025)</p>
 								<p style="margin-bottom:0;"><b>Teaching Assistant</b></p>
