--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									<li><a href="https://x.com/chase_laspisa" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://linkedin.com/in/chase-laspisa-8bb015356" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/chaselaspisa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="mailto:claspisa@uiowa.edu" class="icon brands fa-envelope"><span class="label">Send Email</span></a></li>
+									<li><a href="mailto:claspisa@uiowa.edu" class="icon brands fa fa-envelope"><span class="label">Send Email</span></a></li>
 								</ul>
 							</article>
 
