--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 								<p style="margin : 0; padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
 							</article>
 
+						<!-- CV-->
+							<article id="cv" class="panel">
+								<header><h2>Curriculum Vitae</h2></header>
+								<p>
+									You can download my CV <a href="assets/pdf/LaSpisa_CV.pdf">here</a>,
+								</p>
+								<div>
+									<iframe src="assets/pdf/LaSpisa_CV.pdf" width="100%" height="1000"></iframe>
+								</div>
+							</article>
+
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
