--- a/index.html
+++ b/index.html
@@ -85,15 +85,17 @@
 								<p style="margin : 0; padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
 							</article>
 
-						<!-- CV & Contact -->
-							<article id="cvcontact">
-								<h2 class="major">CV & Contact</h2>
+						<!-- CV -->
+							<article id="cv" class="panel">
+								<header><h2>Curriculum Vitae</h2></header>
 								<p>
 									You can download my CV <a href="assets/pdf/LaSpisa_CV.pdf">here</a>,
 								</p>
-								<div>
-									<iframe src="assets/pdf/LaSpisa_CV.pdf" width="100%" height="1000"></iframe>
-								</div>
+							</article>
+
+						<!-- Contact -->
+							<article id="contact">
+								<h2 class="major">Contact</h2>
 								<ul class="icons">
 									<li><a href="https://x.com/chase_laspisa" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://linkedin.com/in/chase-laspisa-8bb015356" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
