--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<p>I am primarily a quantitative researcher, and I am passionate about developing new data. I have been a part of multiple data generation projects including the Issues Correlates of War, and I have extensive experience in coding and gathering novel data. I am also interested in spatial methodologies and exploring spatial relationships in international conflict and cooperation. Additionally, I have served as an editorial assistant for two journals: Foreign Policy Analysis and American Political Science Review. This has given me significant experience with journals and the publication process.</p>
 								<p>Outside of research, I love reading, traveling, and video games, and I began knitting during my time in Norway. I enjoy the fantasy and science fiction genres, and you can often find me reading in a park or coffee shop on the weekends.</p>
 								<p>
-									You can download my CV <a href="assets/pdf/LaSpisa_CV.pdf">here</a>,
+									You can download my CV <a href="assets/pdf/LaSpisa_CV.pdf">here</a>.
 								</p>
 							</article>
 
