--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
 								<p style="margin : 0; padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
 							</article>
 
+						<!-- CV -->
+							<article id="cv">
+								<h2 class="major">CV</h2>
+							</article>
+
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
