--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#about">About</a></li>
 								<li><a href="#research">Research</a></li>
 								<li><a href="#teaching">Teaching</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#contact"> Cv & Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -88,14 +88,15 @@
 								<p style="margin : 0; padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
 							</article>
 
-						<!-- CV -->
-							<article id="cv">
-								<h2 class="major">CV</h2>
-							</article>
-
-						<!-- Contact -->
+						<!-- CV & Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
+								<h2 class="major">CV & Contact</h2>
+								<p>
+									You can download my CV <a href="assets/pdf/LaSpisa_CV.pdf">here</a>.
+								</p>
+								<div>
+									<iframe src="assets/pdf/LaSpisa_CV.pdf" width="100%" height="1000"></iframe>
+								</div>
 								<ul class="icons">
 									<li><a href="https://x.com/chase_laspisa" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://linkedin.com/in/chase-laspisa-8bb015356" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
