--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#about">About</a></li>
 								<li><a href="#research">Research</a></li>
 								<li><a href="#teaching">Teaching</a></li>
-								<li><a href="#contact"> Cv & Contact</a></li>
+								<li><a href="#contact">CV</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -55,6 +55,12 @@
 								<p>
 									You can download my CV <a href="assets/pdf/LaSpisa_CV.pdf">here</a>.
 								</p>
+								<ul class="icons">
+									<li><a href="https://x.com/chase_laspisa" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://linkedin.com/in/chase-laspisa-8bb015356" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/chaselaspisa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="mailto:claspisa@uiowa.edu" class="icon brands fa-envelope-open"><span class="label">Send Email</span></a></li>
+								</ul>
 							</article>
 
 						<!-- Research -->
@@ -88,21 +94,15 @@
 								<p style="margin : 0; padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
 							</article>
 
-						<!-- CV & Contact -->
+						<!-- CV -->
 							<article id="contact">
-								<h2 class="major">CV & Contact</h2>
+								<h2 class="major">CV</h2>
 								<p>
 									You can download my CV <a href="assets/pdf/LaSpisa_CV.pdf">here</a>.
 								</p>
 								<div>
 									<iframe src="assets/pdf/LaSpisa_CV.pdf" width="100%" height="1000"></iframe>
 								</div>
-								<ul class="icons">
-									<li><a href="https://x.com/chase_laspisa" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://linkedin.com/in/chase-laspisa-8bb015356" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/chaselaspisa" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="mailto:claspisa@uiowa.edu" class="icon brands fa-envelope-open"><span class="label">Send Email</span></a></li>
-								</ul>
 							</article>
 
 						<!-- Elements -->
