--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
 							<article id="teaching">
 								<h2 class="major">Teaching</h2>
 								<span class="image main"><img src="images/pic03.jpeg" alt="" /></span>
-								<p style="margin-bottom:0;"><b>Primary Instructor</b></p>
-								<p style="padding-top:0;">POLI 3512: International Conflict (Fall 2025)</p>
-								<p style="margin-bottom:0;"><b>Teaching Assistant</b></p>
-								<p style="margin : 0; padding-top:0;"></p>POLI 1501:0EXW: Introduction to American Foreign Policy - Head Teaching Assistant </p>
-								<p style="margin : 0; padding-top:0;"></p>POLI 1500: Introduction to International Relations</p>
+								<p style="margin-bottom:0;"><b>Teaching Interests</b></p>
+								<p style="padding-top:0;">International Relations, Interstate Conflict, Civil Conflict, Foreign Policy, Conflict Management, Maritime International Relations, Social Mobilization, Natural Resource Politics, Research Design</p>
+								<p style="margin-bottom:0;"><b>Teaching Experience</b></p>
+								<p style="padding-top:0;">Primary Instructor: POLI 3512: International Conflict (Fall 2025) <a href="assets/pdf/IC_syllabus_Fall2025.pdf">[Syllabus]</a></p>
+								<p style="margin : 0; padding-top:0;"></p>Teaching Assistant: POLI 1501:0EXW: Introduction to American Foreign Policy(Fall 2021-Fall 2022)</p>
+								<p style="margin : 0; padding-top:0;"></p>Teaching Assistant: POLI 1500: Introduction to International Relations (Spring 2021)</p>
+								<p style="margin : 0; padding-top:0;"></p>Teaching Assistant: POLI 1501: Introduction to American Foreign Policy (Fall 2020)</p>
 							</article>
 
 						<!-- CV -->
