New About Image Size

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic01.png" alt="" /></span>
+								<span class="image main"><img src="images/pic01.png" style="width: 500px; height: 500px;"" alt="" /></span>
 								<p>I am from Bartlesville, Oklahoma, and I am currently a PhD candidate in political science at the University of Iowa focusing on international relations and comparative politics. I graduated from Oklahoma State University in May 2020 with a BA in political science, as well as minors in Economics and Russian Language. I also hold an MA in political science (2021) from the University of Iowa.</p>
 								<p>My research centers around the role of natural resources in politics, particularly conflict, cooperation, and contentious politics. My work explores the effect that natural resources have on conflict onset and conflict management, especially in the maritime context, and how natural resources influence regime behavior and social mobilization at all levels of analysis.</p>
 								<p>As countries increasingly turn to the oceans for strategic and economic reasons, my three-paper dissertation titled “Maritime Zones of Contention: The Effect of Offshore Fossil-Fuel Resources on Maritime International Conflict and Cooperation” provides insight into how specific traits of offshore oil and natural gas influence maritime international relations. With most new oil and natural gas production occurring offshore in 2024, offshore fossil-fuel resources remain key sources of economic development and hot points for states when handling issues like maritime border delimitation. My dissertation examines when, where, and why offshore oil and natural gas cause states to engage in conflictual behavior versus cooperative behavior. I develop and test mechanisms for how specific conditions under which offshore oil and natural gas are exploited, managed, and traded influence maritime conflict dynamics. I also treat offshore oil and offshore natural gas as separate resources that have different effects on international relations.</p>
@@ -90,7 +90,7 @@
 								<p style="padding-top:0;">International Relations, Interstate Conflict, Civil Conflict, Foreign Policy, Conflict Management, Maritime International Relations, Social Mobilization, Natural Resource Politics, Research Design</p>
 								<p style="margin-bottom:0;"><b>Teaching Experience</b></p>
 								<p style="padding-top:0;">Primary Instructor: POLI 3512: International Conflict (Fall 2025) <a href="assets/pdf/IC_syllabus_Fall2025.pdf">[Syllabus]</a></p>
-								<p style="margin : 0; padding-top:0;"></p>Teaching Assistant: POLI 1501:0EXW: Introduction to American Foreign Policy(Fall 2021-Fall 2022)</p>
+								<p style="margin : 0; padding-top:0;"></p>Teaching Assistant: POLI 1501:0EXW: Introduction to American Foreign Policy (Fall 2021-Fall 2022)</p>
 								<p style="margin : 0; padding-top:0;"></p>Teaching Assistant: POLI 1500: Introduction to International Relations (Spring 2021)</p>
 								<p style="margin : 0; padding-top:0;"></p>Teaching Assistant: POLI 1501: Introduction to American Foreign Policy (Fall 2020)</p>
 							</article>
