--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<!-- Research -->
 							<article id="research">
 								<h2 class="major">Research</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img style="max-width: 500px; height: auto; " src="images/pic02.jpg" alt="" /></span>
 								<p style="margin-bottom:0;"><b>Peer Reviewed Publications:</b></p>
 								<p style="margin-bottom:0;"><b>LaSpisa, Chase.</b> 2025. “Dangerous Development: The Effect of Offshore Fossil-Fuel Discovery and Production on Maritime Diplomatic Conflict”. <i>International Interactions</i> 25 (1): 29-57. <a href="https://www.tandfonline.com/doi/full/10.1080/03050629.2025.2456735">[Link]</a>.</p>
 								<p style="padding-top:0;"><b>LaSpisa, Chase</b> and Sara McLaughlin Mitchell. 2025. “Testing the Waters: Exploring Why Democracies Have More Maritime Conflict”. <i>Foreign Policy Analysis</i> 21 (2): 1-15. <a href="https://academic.oup.com/fpa/article/21/2/oraf001/8010425">[Link]</a>.</p>
